--- a/src/scss/layaouts/layout_prgms_stages.scss
+++ b/src/scss/layaouts/layout_prgms_stages.scss
@@ -50,9 +50,17 @@
         margin: 0 8px 0 16px;
     }
 
-    DragDropContext {
-        .wrapper {
-            background-color: lightcoral;
+    .section_cont {
+        display: none;
+        width: 100%;
+        min-height: 70px;
+        background-color: #8ec8c863;
+        padding: 8px 16px;
+        margin: 0 0 8px;
+        border-radius: 0 0 4px 4px;
+      
+        .fab, .fab_cont {
+          margin: 0 auto;
         }
-    }
+      }
 }
