--- a/src/css/main.css
+++ b/src/css/main.css
@@ -463,12 +463,12 @@
 }
 .list-ml_item .ml_item {
   display: grid;
-  grid-template-columns: auto 1fr auto auto;
+  grid-template-columns: auto 1fr auto auto auto;
   grid-template-rows: auto;
   grid-auto-columns: 1fr;
   gap: 0px 0px;
   grid-auto-flow: row;
-  grid-template-areas: "ml_list-icon ml_item-title ml_item-warning_error ml_item-cta";
+  grid-template-areas: "ml_list-icon ml_item-title ml_item-desc ml_item-warning_error ml_item-cta";
   padding: 8px;
   margin-bottom: 8px;
 }
@@ -483,6 +483,24 @@
   align-items: center;
   padding-left: 8px;
   grid-area: ml_item-title;
+}
+.list-ml_item .ml_item .ml_item-desc {
+  display: flex;
+  align-items: center;
+  padding-left: 8px;
+  grid-area: ml_item-desc;
+}
+.list-ml_item .ml_item .ml_item-desc div {
+  width: auto;
+  height: 24px;
+  padding: 4px 8px;
+  font-size: 12px;
+  display: flex;
+  align-items: center;
+  color: #FFFFFF;
+  margin-right: 8px;
+  background-color: #333;
+  border-radius: 4px;
 }
 .list-ml_item .ml_item .ml_item-warning_error {
   display: flex;
@@ -502,12 +520,13 @@
   display: none;
   width: 100%;
   min-height: 70px;
-  background-color: #8ec8c863;
+  background-color: #f5fbff;
   padding: 8px 16px;
   margin: 0 0 8px;
   border-radius: 0 0 4px 4px;
 }
-.cont_stage .section_cont .fab, .cont_stage .section_cont .fab_cont {
+.cont_stage .section_cont .fab,
+.cont_stage .section_cont .fab_cont {
   margin: 0 auto;
 }
 
