--- a/src/scss/layaouts/layout_prgms_stages.scss
+++ b/src/scss/layaouts/layout_prgms_stages.scss
@@ -5,13 +5,13 @@
 
     .ml_item {
         display: grid;
-        grid-template-columns: auto 1fr auto auto;
+        grid-template-columns: auto 1fr auto auto auto;
         grid-template-rows: auto;
         grid-auto-columns: 1fr;
         gap: 0px 0px;
         grid-auto-flow: row;
         grid-template-areas:
-            "ml_list-icon ml_item-title ml_item-warning_error ml_item-cta";
+            "ml_list-icon ml_item-title ml_item-desc ml_item-warning_error ml_item-cta";
         padding: 8px;
         margin-bottom: 8px;
 
@@ -21,20 +21,40 @@
             align-items: center;
             grid-area: ml_list-icon;
         }
-    
+
         .ml_item-title {
             display: flex;
             align-items: center;
             padding-left: 8px;
             grid-area: ml_item-title;
         }
-    
+
+        .ml_item-desc {
+            display: flex;
+            align-items: center;
+            padding-left: 8px;
+            grid-area: ml_item-desc;
+
+            div {
+                width: auto;
+                height: 24px;
+                padding: 4px 8px;
+                font-size: 12px;
+                display: flex;
+                align-items: center;
+                color: #FFFFFF;
+                margin-right: 8px;
+                background-color: #333;
+                border-radius: 4px;
+            }
+        }
+
         .ml_item-warning_error {
             display: flex;
             align-items: center;
             grid-area: ml_item-warning_error;
         }
-    
+
         .ml_item-cta {
             display: flex;
             align-items: center;
@@ -45,8 +65,8 @@
 
 // Stage
 
-.cont_stage{
-    .title{
+.cont_stage {
+    .title {
         margin: 0 8px 0 16px;
     }
 
@@ -54,13 +74,14 @@
         display: none;
         width: 100%;
         min-height: 70px;
-        background-color: #8ec8c863;
+        background-color: #f5fbff;
         padding: 8px 16px;
         margin: 0 0 8px;
         border-radius: 0 0 4px 4px;
-      
-        .fab, .fab_cont {
-          margin: 0 auto;
+
+        .fab,
+        .fab_cont {
+            margin: 0 auto;
         }
-      }
+    }
 }
