--- a/src/css/main copy.css
+++ b/src/css/main copy.css
@@ -110,7 +110,7 @@
   background-color: #29C4A9 !important;
 }
 .de_label_type {
-  background-color: #e3f0c2 !important;
+  background-color: #5a39d1 !important;
 }
 
 .import_update {
