--- a/src/css/main.css
+++ b/src/css/main.css
@@ -525,6 +525,63 @@
   margin: 0 0 8px;
   border-radius: 0 0 4px 4px;
 }
+.cont_stage .section_cont div .ml_item {
+  display: grid;
+  grid-template-columns: auto 1fr auto auto auto;
+  grid-template-rows: auto;
+  grid-auto-columns: 1fr;
+  gap: 0px 0px;
+  grid-auto-flow: row;
+  grid-template-areas: "ml_list-icon ml_item-title ml_item-desc ml_item-warning_error ml_item-cta";
+  padding: 8px;
+  margin-bottom: 8px;
+  background-color: #e0f2f1;
+}
+.cont_stage .section_cont div .ml_item .ml_list-icon {
+  padding-top: 2px;
+  display: flex;
+  align-items: center;
+  border: px solid red;
+  grid-area: ml_list-icon;
+}
+.cont_stage .section_cont div .ml_item .ml_list-icon .ml_list-img {
+  width: 24px;
+  height: 24px;
+}
+.cont_stage .section_cont div .ml_item .ml_item-title {
+  display: flex;
+  align-items: center;
+  padding-left: 8px;
+  grid-area: ml_item-title;
+}
+.cont_stage .section_cont div .ml_item .ml_item-desc {
+  display: flex;
+  align-items: center;
+  padding-left: 8px;
+  grid-area: ml_item-desc;
+}
+.cont_stage .section_cont div .ml_item .ml_item-desc div {
+  width: auto;
+  height: 24px;
+  padding: 4px 8px;
+  font-size: 12px;
+  display: flex;
+  align-items: center;
+  color: #FFFFFF;
+  margin-right: 8px;
+  background-color: #333;
+  border-radius: 4px;
+}
+.cont_stage .section_cont div .ml_item .ml_item-warning_error {
+  display: flex;
+  align-items: center;
+  grid-area: ml_item-warning_error;
+}
+.cont_stage .section_cont div .ml_item .ml_item-cta {
+  display: flex;
+  align-items: center;
+  grid-area: ml_item-cta;
+}
 .cont_stage .section_cont .fab,
 .cont_stage .section_cont .fab_cont {
   margin: 0 auto;
