--- a/src/scss/layaouts/layout_prgms_stages.scss
+++ b/src/scss/layaouts/layout_prgms_stages.scss
@@ -70,18 +70,101 @@
         margin: 0 8px 0 16px;
     }
 
-    .section_cont {
-        display: none;
-        width: 100%;
-        min-height: 70px;
-        background-color: #f5fbff;
-        padding: 8px 16px;
-        margin: 0 0 8px;
-        border-radius: 0 0 4px 4px;
+    .wrapper {
 
-        div {
-            //border: 1px solid red;
+        .layout_prgms_stages {
+            background-color: chartreuse;
 
+            div {
+                .section_cont {
+                    display: none;
+                    width: 100%;
+                    //min-height: 70px;
+                    background-color: rgb(47, 0, 255);
+                    background-color: #f5fbff;
+                    padding: 8px 16px;
+                    margin: 0 0 8px;
+                    border-radius: 0 0 4px 4px;
+
+                    div {
+                        //border: 1px solid red;
+
+                        .ml_item {
+                            display: grid;
+                            grid-template-columns: auto 1fr auto auto auto;
+                            grid-template-rows: auto;
+                            grid-auto-columns: 1fr;
+                            gap: 0px 0px;
+                            grid-auto-flow: row;
+                            grid-template-areas:
+                                "ml_list-icon ml_item-title ml_item-desc ml_item-warning_error ml_item-cta";
+                            padding: 8px;
+                            margin-bottom: 8px;
+                            background-color: #e0f2f1;
+
+                            .ml_list-icon {
+                                padding-top: 2px;
+                                display: flex;
+                                align-items: center;
+                                border: px solid red;
+                                grid-area: ml_list-icon;
+
+                                .ml_list-img {
+                                    width: 24px;
+                                    height: 24px;
+                                }
+                            }
+
+                            .ml_item-title {
+                                display: flex;
+                                align-items: center;
+                                padding-left: 8px;
+                                grid-area: ml_item-title;
+                            }
+
+                            .ml_item-desc {
+                                display: flex;
+                                align-items: center;
+                                padding-left: 8px;
+                                grid-area: ml_item-desc;
+
+                                div {
+                                    width: auto;
+                                    height: 24px;
+                                    padding: 4px 8px;
+                                    font-size: 12px;
+                                    display: flex;
+                                    align-items: center;
+                                    color: #FFFFFF;
+                                    margin-right: 8px;
+                                    background-color: #333;
+                                    border-radius: 4px;
+                                }
+                            }
+
+                            .ml_item-warning_error {
+                                display: flex;
+                                align-items: center;
+                                grid-area: ml_item-warning_error;
+                            }
+
+                            .ml_item-cta {
+                                display: flex;
+                                align-items: center;
+                                grid-area: ml_item-cta;
+                            }
+                        }
+                    }
+
+                    .fab,
+                    .fab_cont {
+                        margin: 0 auto;
+                    }
+                }
+            }
+        }
+
+        .list-ml_item {
             .ml_item {
                 display: grid;
                 grid-template-columns: auto 1fr auto auto auto;
@@ -93,16 +176,17 @@
                     "ml_list-icon ml_item-title ml_item-desc ml_item-warning_error ml_item-cta";
                 padding: 8px;
                 margin-bottom: 8px;
+                border: 1px solid rgb(17, 0, 255);
                 background-color: #e0f2f1;
 
                 .ml_list-icon {
                     padding-top: 2px;
                     display: flex;
                     align-items: center;
-                    border: px solid red;
+                    border: 1px solid red;
                     grid-area: ml_list-icon;
 
-                    .ml_list-img{
+                    .ml_list-img {
                         width: 24px;
                         height: 24px;
                     }
@@ -149,9 +233,9 @@
             }
         }
 
-        .fab,
-        .fab_cont {
-            margin: 0 auto;
-        }
+
+
     }
+
+
 }
