--- a/src/css/main.css
+++ b/src/css/main.css
@@ -513,22 +513,148 @@
   grid-area: ml_item-cta;
 }
 
+.app-shell-app {
+  overflow: hidden !important;
+}
+
+.cont_stage {
+  overflow: hidden;
+  width: 100%;
+  height: 100vh;
+}
 .cont_stage .title {
   margin: 0 8px 0 16px;
 }
-.cont_stage .wrapper .layout_prgms_stages {
-  background-color: chartreuse;
+.cont_stage .wrapper {
+  height: calc(100% - 224px);
+  overflow-y: auto;
 }
-.cont_stage .wrapper .layout_prgms_stages div .section_cont {
+.cont_stage .wrapper .layout_prgms_stages {
+  height: auto;
+}
+.cont_stage .wrapper .layout_prgms_stages .list-ml_item {
+  height: auto;
+}
+.cont_stage .wrapper .layout_prgms_stages .list-ml_item div .ml_item {
+  display: grid;
+  grid-template-columns: auto 1fr auto auto auto;
+  grid-template-rows: auto;
+  grid-auto-columns: 1fr;
+  gap: 0px 0px;
+  grid-auto-flow: row;
+  grid-template-areas: "ml_list-icon ml_item-title ml_item-desc ml_item-warning_error ml_item-cta";
+  padding: 8px;
+  margin: 8px;
+}
+.cont_stage .wrapper .layout_prgms_stages .list-ml_item div .ml_item .ml_list-icon {
+  padding-top: 2px;
+  display: flex;
+  align-items: center;
+  grid-area: ml_list-icon;
+}
+.cont_stage .wrapper .layout_prgms_stages .list-ml_item div .ml_item .ml_list-icon .ml_list-img {
+  width: 24px;
+  height: 24px;
+}
+.cont_stage .wrapper .layout_prgms_stages .list-ml_item div .ml_item .ml_item-title {
+  display: flex;
+  align-items: center;
+  padding-left: 8px;
+  grid-area: ml_item-title;
+}
+.cont_stage .wrapper .layout_prgms_stages .list-ml_item div .ml_item .ml_item-desc {
+  display: flex;
+  align-items: center;
+  padding-left: 8px;
+  grid-area: ml_item-desc;
+}
+.cont_stage .wrapper .layout_prgms_stages .list-ml_item div .ml_item .ml_item-desc div {
+  width: auto;
+  height: 24px;
+  padding: 4px 8px;
+  font-size: 12px;
+  display: flex;
+  align-items: center;
+  color: #FFFFFF;
+  margin-right: 8px;
+  background-color: #333;
+  border-radius: 4px;
+}
+.cont_stage .wrapper .layout_prgms_stages .list-ml_item div .ml_item .ml_item-warning_error {
+  display: flex;
+  align-items: center;
+  grid-area: ml_item-warning_error;
+}
+.cont_stage .wrapper .layout_prgms_stages .list-ml_item div .ml_item .ml_item-cta {
+  display: flex;
+  align-items: center;
+  grid-area: ml_item-cta;
+}
+.cont_stage .wrapper .layout_prgms_stages .ml_item {
+  clear: both;
+  display: grid;
+  grid-template-columns: auto 1fr auto auto auto;
+  grid-template-rows: auto;
+  grid-auto-columns: 1fr;
+  gap: 0px 0px;
+  grid-auto-flow: row;
+  grid-template-areas: "ml_list-icon ml_item-title ml_item-desc ml_item-warning_error ml_item-cta";
+  padding: 8px;
+  margin: 18px 0 8px;
+}
+.cont_stage .wrapper .layout_prgms_stages .ml_item .ml_list-icon {
+  padding-top: 2px;
+  display: flex;
+  align-items: center;
+  grid-area: ml_list-icon;
+}
+.cont_stage .wrapper .layout_prgms_stages .ml_item .ml_list-icon .ml_list-img {
+  width: 24px;
+  height: 24px;
+}
+.cont_stage .wrapper .layout_prgms_stages .ml_item .ml_item-title {
+  display: flex;
+  align-items: center;
+  padding-left: 8px;
+  grid-area: ml_item-title;
+}
+.cont_stage .wrapper .layout_prgms_stages .ml_item .ml_item-desc {
+  display: flex;
+  align-items: center;
+  padding-left: 8px;
+  grid-area: ml_item-desc;
+}
+.cont_stage .wrapper .layout_prgms_stages .ml_item .ml_item-desc div {
+  width: auto;
+  height: 24px;
+  padding: 4px 8px;
+  font-size: 12px;
+  display: flex;
+  align-items: center;
+  color: #FFFFFF;
+  margin-right: 8px;
+  background-color: #333;
+  border-radius: 4px;
+}
+.cont_stage .wrapper .layout_prgms_stages .ml_item .ml_item-warning_error {
+  display: flex;
+  align-items: center;
+  grid-area: ml_item-warning_error;
+}
+.cont_stage .wrapper .layout_prgms_stages .ml_item .ml_item-cta {
+  display: flex;
+  align-items: center;
+  grid-area: ml_item-cta;
+}
+.cont_stage .wrapper .layout_prgms_stages .section_cont {
   display: none;
   width: 100%;
-  background-color: #2f00ff;
   background-color: #f5fbff;
   padding: 8px 16px;
   margin: 0 0 8px;
   border-radius: 0 0 4px 4px;
 }
-.cont_stage .wrapper .layout_prgms_stages div .section_cont div .ml_item {
+.cont_stage .wrapper .layout_prgms_stages .section_cont .ml_item {
   display: grid;
   grid-template-columns: auto 1fr auto auto auto;
   grid-template-rows: auto;
@@ -538,32 +664,30 @@
   grid-template-areas: "ml_list-icon ml_item-title ml_item-desc ml_item-warning_error ml_item-cta";
   padding: 8px;
   margin-bottom: 8px;
-  background-color: #e0f2f1;
 }
-.cont_stage .wrapper .layout_prgms_stages div .section_cont div .ml_item .ml_list-icon {
+.cont_stage .wrapper .layout_prgms_stages .section_cont .ml_item .ml_list-icon {
   padding-top: 2px;
   display: flex;
   align-items: center;
-  border: px solid red;
   grid-area: ml_list-icon;
 }
-.cont_stage .wrapper .layout_prgms_stages div .section_cont div .ml_item .ml_list-icon .ml_list-img {
+.cont_stage .wrapper .layout_prgms_stages .section_cont .ml_item .ml_list-icon .ml_list-img {
   width: 24px;
   height: 24px;
 }
-.cont_stage .wrapper .layout_prgms_stages div .section_cont div .ml_item .ml_item-title {
+.cont_stage .wrapper .layout_prgms_stages .section_cont .ml_item .ml_item-title {
   display: flex;
   align-items: center;
   padding-left: 8px;
   grid-area: ml_item-title;
 }
-.cont_stage .wrapper .layout_prgms_stages div .section_cont div .ml_item .ml_item-desc {
+.cont_stage .wrapper .layout_prgms_stages .section_cont .ml_item .ml_item-desc {
   display: flex;
   align-items: center;
   padding-left: 8px;
   grid-area: ml_item-desc;
 }
-.cont_stage .wrapper .layout_prgms_stages div .section_cont div .ml_item .ml_item-desc div {
+.cont_stage .wrapper .layout_prgms_stages .section_cont .ml_item .ml_item-desc div {
   width: auto;
   height: 24px;
   padding: 4px 8px;
@@ -575,74 +699,12 @@
   background-color: #333;
   border-radius: 4px;
 }
-.cont_stage .wrapper .layout_prgms_stages div .section_cont div .ml_item .ml_item-warning_error {
+.cont_stage .wrapper .layout_prgms_stages .section_cont .ml_item .ml_item-warning_error {
   display: flex;
   align-items: center;
   grid-area: ml_item-warning_error;
 }
-.cont_stage .wrapper .layout_prgms_stages div .section_cont div .ml_item .ml_item-cta {
-  display: flex;
-  align-items: center;
-  grid-area: ml_item-cta;
-}
-.cont_stage .wrapper .layout_prgms_stages div .section_cont .fab,
-.cont_stage .wrapper .layout_prgms_stages div .section_cont .fab_cont {
-  margin: 0 auto;
-}
-.cont_stage .wrapper .list-ml_item .ml_item {
-  display: grid;
-  grid-template-columns: auto 1fr auto auto auto;
-  grid-template-rows: auto;
-  grid-auto-columns: 1fr;
-  gap: 0px 0px;
-  grid-auto-flow: row;
-  grid-template-areas: "ml_list-icon ml_item-title ml_item-desc ml_item-warning_error ml_item-cta";
-  padding: 8px;
-  margin-bottom: 8px;
-  border: 1px solid #1100ff;
-  background-color: #e0f2f1;
-}
-.cont_stage .wrapper .list-ml_item .ml_item .ml_list-icon {
-  padding-top: 2px;
-  display: flex;
-  align-items: center;
-  border: 1px solid red;
-  grid-area: ml_list-icon;
-}
-.cont_stage .wrapper .list-ml_item .ml_item .ml_list-icon .ml_list-img {
-  width: 24px;
-  height: 24px;
-}
-.cont_stage .wrapper .list-ml_item .ml_item .ml_item-title {
-  display: flex;
-  align-items: center;
-  padding-left: 8px;
-  grid-area: ml_item-title;
-}
-.cont_stage .wrapper .list-ml_item .ml_item .ml_item-desc {
-  display: flex;
-  align-items: center;
-  padding-left: 8px;
-  grid-area: ml_item-desc;
-}
-.cont_stage .wrapper .list-ml_item .ml_item .ml_item-desc div {
-  width: auto;
-  height: 24px;
-  padding: 4px 8px;
-  font-size: 12px;
-  display: flex;
-  align-items: center;
-  color: #FFFFFF;
-  margin-right: 8px;
-  background-color: #333;
-  border-radius: 4px;
-}
-.cont_stage .wrapper .list-ml_item .ml_item .ml_item-warning_error {
-  display: flex;
-  align-items: center;
-  grid-area: ml_item-warning_error;
-}
-.cont_stage .wrapper .list-ml_item .ml_item .ml_item-cta {
+.cont_stage .wrapper .layout_prgms_stages .section_cont .ml_item .ml_item-cta {
   display: flex;
   align-items: center;
   grid-area: ml_item-cta;
@@ -674,7 +736,6 @@ body, .wrapper {
 }
 
 body {
-  overflow-x: hidden;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
