--- a/src/scss/layaouts/layout_prgms_stages.scss
+++ b/src/scss/layaouts/layout_prgms_stages.scss
@@ -14,6 +14,7 @@
             "ml_list-icon ml_item-title ml_item-desc ml_item-warning_error ml_item-cta";
         padding: 8px;
         margin-bottom: 8px;
+        //background-color: #E3F2FD;
 
         .ml_list-icon {
             padding-top: 2px;
@@ -63,109 +64,105 @@
     }
 }
 
-// Stage
-
+// programStage
+.app-shell-app {
+    overflow: hidden!important;
+}
 .cont_stage {
+    overflow: hidden;
+    width: 100%;
+    height: 100vh;
+
     .title {
         margin: 0 8px 0 16px;
     }
 
-    .wrapper {
+    .wrapper { //OK!!
+        height: calc(100% - 224px);
+        overflow-y: auto;
+        //background-color: rgb(255, 0, 242);
 
         .layout_prgms_stages {
-            background-color: chartreuse;
+            //background-color: cyan;
+            height: auto;
+            //overflow-y: auto;
 
-            div {
-                .section_cont {
-                    display: none;
-                    width: 100%;
-                    //min-height: 70px;
-                    background-color: rgb(47, 0, 255);
-                    background-color: #f5fbff;
-                    padding: 8px 16px;
-                    margin: 0 0 8px;
-                    border-radius: 0 0 4px 4px;
+            .list-ml_item {
+                height: auto;
 
-                    div {
-                        //border: 1px solid red;
+                div {
 
-                        .ml_item {
-                            display: grid;
-                            grid-template-columns: auto 1fr auto auto auto;
-                            grid-template-rows: auto;
-                            grid-auto-columns: 1fr;
-                            gap: 0px 0px;
-                            grid-auto-flow: row;
-                            grid-template-areas:
-                                "ml_list-icon ml_item-title ml_item-desc ml_item-warning_error ml_item-cta";
-                            padding: 8px;
-                            margin-bottom: 8px;
-                            background-color: #e0f2f1;
+                    .ml_item {
+                        //ok
+                        display: grid;
+                        grid-template-columns: auto 1fr auto auto auto;
+                        grid-template-rows: auto;
+                        grid-auto-columns: 1fr;
+                        gap: 0px 0px;
+                        grid-auto-flow: row;
+                        grid-template-areas:
+                            "ml_list-icon ml_item-title ml_item-desc ml_item-warning_error ml_item-cta";
+                        padding: 8px;
+                        margin: 8px;
+                        //background-color: #b2dfdb;
 
-                            .ml_list-icon {
-                                padding-top: 2px;
-                                display: flex;
-                                align-items: center;
-                                border: px solid red;
-                                grid-area: ml_list-icon;
+                        .ml_list-icon {
+                            padding-top: 2px;
+                            display: flex;
+                            align-items: center;
+                            grid-area: ml_list-icon;
 
-                                .ml_list-img {
-                                    width: 24px;
-                                    height: 24px;
-                                }
-                            }
-
-                            .ml_item-title {
-                                display: flex;
-                                align-items: center;
-                                padding-left: 8px;
-                                grid-area: ml_item-title;
-                            }
-
-                            .ml_item-desc {
-                                display: flex;
-                                align-items: center;
-                                padding-left: 8px;
-                                grid-area: ml_item-desc;
-
-                                div {
-                                    width: auto;
-                                    height: 24px;
-                                    padding: 4px 8px;
-                                    font-size: 12px;
-                                    display: flex;
-                                    align-items: center;
-                                    color: #FFFFFF;
-                                    margin-right: 8px;
-                                    background-color: #333;
-                                    border-radius: 4px;
-                                }
-                            }
-
-                            .ml_item-warning_error {
-                                display: flex;
-                                align-items: center;
-                                grid-area: ml_item-warning_error;
-                            }
-
-                            .ml_item-cta {
-                                display: flex;
-                                align-items: center;
-                                grid-area: ml_item-cta;
+                            .ml_list-img {
+                                width: 24px;
+                                height: 24px;
                             }
                         }
-                    }
 
-                    .fab,
-                    .fab_cont {
-                        margin: 0 auto;
+                        .ml_item-title {
+                            display: flex;
+                            align-items: center;
+                            padding-left: 8px;
+                            grid-area: ml_item-title;
+                        }
+
+                        .ml_item-desc {
+                            display: flex;
+                            align-items: center;
+                            padding-left: 8px;
+                            grid-area: ml_item-desc;
+
+                            div {
+                                width: auto;
+                                height: 24px;
+                                padding: 4px 8px;
+                                font-size: 12px;
+                                display: flex;
+                                align-items: center;
+                                color: #FFFFFF;
+                                margin-right: 8px;
+                                background-color: #333;
+                                border-radius: 4px;
+                            }
+                        }
+
+                        .ml_item-warning_error {
+                            display: flex;
+                            align-items: center;
+                            grid-area: ml_item-warning_error;
+                        }
+
+                        .ml_item-cta {
+                            display: flex;
+                            align-items: center;
+                            grid-area: ml_item-cta;
+                        }
                     }
                 }
             }
-        }
 
-        .list-ml_item {
+            //Scores & CSC
             .ml_item {
+                clear: both;
                 display: grid;
                 grid-template-columns: auto 1fr auto auto auto;
                 grid-template-rows: auto;
@@ -175,15 +172,13 @@
                 grid-template-areas:
                     "ml_list-icon ml_item-title ml_item-desc ml_item-warning_error ml_item-cta";
                 padding: 8px;
-                margin-bottom: 8px;
-                border: 1px solid rgb(17, 0, 255);
-                background-color: #e0f2f1;
-
+                margin: 18px 0 8px;
+                //background-color: #c8e6c9;
+        
                 .ml_list-icon {
                     padding-top: 2px;
                     display: flex;
                     align-items: center;
-                    border: 1px solid red;
                     grid-area: ml_list-icon;
 
                     .ml_list-img {
@@ -191,20 +186,20 @@
                         height: 24px;
                     }
                 }
-
+        
                 .ml_item-title {
                     display: flex;
                     align-items: center;
                     padding-left: 8px;
                     grid-area: ml_item-title;
                 }
-
+        
                 .ml_item-desc {
                     display: flex;
                     align-items: center;
                     padding-left: 8px;
                     grid-area: ml_item-desc;
-
+        
                     div {
                         width: auto;
                         height: 24px;
@@ -218,24 +213,93 @@
                         border-radius: 4px;
                     }
                 }
-
+        
                 .ml_item-warning_error {
                     display: flex;
                     align-items: center;
                     grid-area: ml_item-warning_error;
                 }
-
+        
                 .ml_item-cta {
                     display: flex;
                     align-items: center;
                     grid-area: ml_item-cta;
                 }
             }
+
+            .section_cont {
+                display: none;
+                width: 100%;
+                background-color: #f5fbff;
+                padding: 8px 16px;
+                margin: 0 0 8px;
+                border-radius: 0 0 4px 4px;
+
+                .ml_item {
+                    display: grid;
+                    grid-template-columns: auto 1fr auto auto auto;
+                    grid-template-rows: auto;
+                    grid-auto-columns: 1fr;
+                    gap: 0px 0px;
+                    grid-auto-flow: row;
+                    grid-template-areas:
+                        "ml_list-icon ml_item-title ml_item-desc ml_item-warning_error ml_item-cta";
+                    padding: 8px;
+                    margin-bottom: 8px;
+                    //background-color: #c8e6c9;
+
+                    .ml_list-icon {
+                        padding-top: 2px;
+                        display: flex;
+                        align-items: center;
+                        grid-area: ml_list-icon;
+
+                        .ml_list-img {
+                            width: 24px;
+                            height: 24px;
+                        }
+                    }
+
+                    .ml_item-title {
+                        display: flex;
+                        align-items: center;
+                        padding-left: 8px;
+                        grid-area: ml_item-title;
+                    }
+
+                    .ml_item-desc {
+                        display: flex;
+                        align-items: center;
+                        padding-left: 8px;
+                        grid-area: ml_item-desc;
+
+                        div {
+                            width: auto;
+                            height: 24px;
+                            padding: 4px 8px;
+                            font-size: 12px;
+                            display: flex;
+                            align-items: center;
+                            color: #FFFFFF;
+                            margin-right: 8px;
+                            background-color: #333;
+                            border-radius: 4px;
+                        }
+                    }
+
+                    .ml_item-warning_error {
+                        display: flex;
+                        align-items: center;
+                        grid-area: ml_item-warning_error;
+                    }
+
+                    .ml_item-cta {
+                        display: flex;
+                        align-items: center;
+                        grid-area: ml_item-cta;
+                    }
+                }
+            }
         }
-
-
-
     }
-
-
 }
