Update: v1.2.0 - Fixes & Improvements
Co-authored-by: Mario López <00046317@uca.edu.sv>

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,15 @@
+/* CUSTOM STYLES FG*/
+.progressItem {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 0.5rem;
+}
+
+.progressItem > p {
+  margin-left: 0.5rem;
+}
+
 ::-webkit-scrollbar {
   width: 3px;
   height: 3px;
