--- a/src/css/main.css
+++ b/src/css/main.css
@@ -20,6 +20,9 @@
   border-left: 1px solid #d5dde5;
   border-right: 1px solid #d5dde5;
 }
+
+.opacity-5{ opacity: 0.5; }
+.opacity-7{ opacity: 0.7; }
 /* **************** */
 
 ::-webkit-scrollbar {
