--- a/src/css/main.css
+++ b/src/css/main.css
@@ -23,6 +23,8 @@
 
 .opacity-5{ opacity: 0.5; }
 .opacity-7{ opacity: 0.7; }
+
+.align-items-center { align-items: center;}
 /* **************** */
 
 ::-webkit-scrollbar {
