--- a/src/css/main.css
+++ b/src/css/main.css
@@ -24,6 +24,19 @@
 .opacity-5{ opacity: 0.5; }
 .opacity-7{ opacity: 0.7; }
 
+@keyframes blink-opacity{
+  0%{ opacity: 1 }
+  50%{ opacity: 0.5 }
+  100%{ opacity: 1 }
+}
+
+.blink-opacity-5{
+  animation: blink-opacity 5s ease infinite;
+}
+.blink-opacity-2{
+  animation: blink-opacity 2s ease infinite;
+}
+
 .align-items-center { align-items: center;}
 /* **************** */
 
